tests/toy/neg/001406_mutation.toylang
program a = { var a : bool while; } .
